--- a/app/src/main/res/layout/activity_txt_recognition.xml
+++ b/app/src/main/res/layout/activity_txt_recognition.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D4E7F7"
-    tools:context=".activities.ImgLabelingActivity">
+    tools:context=".activities.TxtRecognitionActivity">
 
     <Button
-        android:id="@+id/btnBackImgLbl"
+        android:id="@+id/btnBackTxtRec"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
@@ -21,12 +21,37 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageTxtRec"
+        android:layout_width="255dp"
+        android:layout_height="244dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintEnd_toEndOf="@+id/txtYourImageRec"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="@+id/txtYourImageRec"
+        app:layout_constraintTop_toBottomOf="@+id/txtYourImageRec"
+        app:srcCompat="@drawable/ic_launcher_background" />
+
     <TextView
-        android:id="@+id/txtImgForRec"
+        android:id="@+id/txtRecResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="19sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/imageTxtRec"
+        app:layout_constraintStart_toStartOf="@+id/imageTxtRec"
+        app:layout_constraintTop_toBottomOf="@+id/imageTxtRec" />
+
+    <TextView
+        android:id="@+id/txtRecLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="@string/image_to_recognize"
+        android:gravity="center"
+        android:text="@string/text_to_be_recognize"
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -35,7 +60,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnLoadImage"
+        android:id="@+id/btnTxtRecLoadImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
@@ -44,12 +69,12 @@
         android:text="@string/load_image"
         android:textAllCaps="false"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/txtImgForRec"
-        app:layout_constraintStart_toStartOf="@+id/txtImgForRec"
-        app:layout_constraintTop_toBottomOf="@+id/txtImgForRec" />
+        app:layout_constraintEnd_toEndOf="@+id/txtRecLabel"
+        app:layout_constraintStart_toStartOf="@+id/txtRecLabel"
+        app:layout_constraintTop_toBottomOf="@+id/txtRecLabel" />
 
     <TextView
-        android:id="@+id/txtYourImage"
+        android:id="@+id/txtYourImageRec"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -57,35 +82,12 @@
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/btnLoadImage"
-        app:layout_constraintStart_toStartOf="@+id/btnLoadImage"
-        app:layout_constraintTop_toBottomOf="@+id/btnLoadImage" />
-
-    <ImageView
-        android:id="@+id/myImage"
-        android:layout_width="272dp"
-        android:layout_height="185dp"
-        android:layout_marginTop="1dp"
-        app:layout_constraintEnd_toEndOf="@+id/txtYourImage"
-        app:layout_constraintStart_toStartOf="@+id/txtYourImage"
-        app:layout_constraintTop_toBottomOf="@+id/txtYourImage"
-        app:srcCompat="@drawable/ic_launcher_background" />
-
-    <TextView
-        android:id="@+id/txtImgLblResult"
-        android:layout_width="353dp"
-        android:layout_height="132dp"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/myImage"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="@+id/myImage"
-        app:layout_constraintTop_toBottomOf="@+id/myImage" />
+        app:layout_constraintEnd_toEndOf="@+id/btnTxtRecLoadImg"
+        app:layout_constraintStart_toStartOf="@+id/btnTxtRecLoadImg"
+        app:layout_constraintTop_toBottomOf="@+id/btnTxtRecLoadImg" />
 
     <Button
-        android:id="@+id/btnTranslateTxt"
+        android:id="@+id/btnTxtRecTranslate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -94,9 +96,8 @@
         android:text="@string/translate"
         android:textAllCaps="false"
         android:textSize="18sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/btnBackImgLbl"
-        app:layout_constraintEnd_toEndOf="@+id/txtImgLblResult"
-        app:layout_constraintStart_toStartOf="@+id/txtImgLblResult" />
+        app:layout_constraintBottom_toTopOf="@+id/btnBackTxtRec"
+        app:layout_constraintEnd_toEndOf="@+id/txtRecResult"
+        app:layout_constraintStart_toStartOf="@+id/txtRecResult" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
