--- a/app/src/main/res/layout/activity_txt_recognition.xml
+++ b/app/src/main/res/layout/activity_txt_recognition.xml
@@ -23,9 +23,8 @@
 
     <ImageView
         android:id="@+id/imageTxtRec"
-        android:layout_width="255dp"
-        android:layout_height="244dp"
-        android:layout_marginTop="1dp"
+        android:layout_width="252dp"
+        android:layout_height="228dp"
         app:layout_constraintEnd_toEndOf="@+id/txtYourImageRec"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="@+id/txtYourImageRec"
@@ -36,7 +35,7 @@
         android:id="@+id/txtRecResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="120dp"
         android:gravity="center"
         android:textColor="#000000"
         android:textSize="19sp"
@@ -90,7 +89,7 @@
         android:id="@+id/btnTxtRecTranslate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:backgroundTint="#235B91"
         android:gravity="center"
         android:text="@string/translate"
@@ -99,5 +98,19 @@
         app:layout_constraintBottom_toTopOf="@+id/btnBackTxtRec"
         app:layout_constraintEnd_toEndOf="@+id/txtRecResult"
         app:layout_constraintStart_toStartOf="@+id/txtRecResult" />
+
+    <Button
+        android:id="@+id/btnTxtRecDetect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:backgroundTint="#235B91"
+        android:gravity="center"
+        android:text="@string/detect_text"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageTxtRec"
+        app:layout_constraintStart_toStartOf="@+id/imageTxtRec"
+        app:layout_constraintTop_toBottomOf="@+id/imageTxtRec" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
