Translate function to all languages added.

--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -42,7 +42,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="25dp"
         android:background="#1C1B1B"
-        android:backgroundTint="#6EBEEA"
+        android:backgroundTint="#A2AAAE"
         app:layout_constraintEnd_toEndOf="@+id/txtTranslateTo"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="@+id/txtTranslateTo"
@@ -53,10 +53,10 @@
         android:id="@+id/txtTranslateResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="70dp"
         android:gravity="center"
         android:textColor="#000000"
-        android:textSize="17sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/spnTranslateTxt"
         app:layout_constraintStart_toStartOf="@+id/spnTranslateTxt"
