Edit UI in translate activity.

--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -26,21 +26,20 @@
         android:id="@+id/txtTranslateTo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="100dp"
         android:text="@string/translate_to"
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/txtTranslateOrgValue"
+        app:layout_constraintStart_toStartOf="@+id/txtTranslateOrgValue"
+        app:layout_constraintTop_toBottomOf="@+id/txtTranslateOrgValue" />
 
     <Spinner
         android:id="@+id/spnTranslateTxt"
         android:layout_width="285dp"
         android:layout_height="45dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="10dp"
         android:background="#1C1B1B"
         android:backgroundTint="#A2AAAE"
         app:layout_constraintEnd_toEndOf="@+id/txtTranslateTo"
@@ -53,10 +52,51 @@
         android:id="@+id/txtTranslateResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="25dp"
         android:gravity="center"
         android:textColor="#000000"
         android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/txtTranslateResultLabel"
+        app:layout_constraintStart_toStartOf="@+id/txtTranslateResultLabel"
+        app:layout_constraintTop_toBottomOf="@+id/txtTranslateResultLabel" />
+
+    <TextView
+        android:id="@+id/txtTranslateOrgLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="@string/original_text"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtTranslateOrgValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/txtTranslateOrgLabel"
+        app:layout_constraintStart_toStartOf="@+id/txtTranslateOrgLabel"
+        app:layout_constraintTop_toBottomOf="@+id/txtTranslateOrgLabel" />
+
+    <TextView
+        android:id="@+id/txtTranslateResultLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:text="@string/translated_text"
+        android:textColor="#000000"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/spnTranslateTxt"
         app:layout_constraintStart_toStartOf="@+id/spnTranslateTxt"
