--- a/app/src/main/res/layout/activity_sights.xml
+++ b/app/src/main/res/layout/activity_sights.xml
@@ -108,4 +108,14 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="@+id/txtNearestSightLabel" />
 
+    <Button
+        android:id="@+id/btnSightsList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:text="List"
+        app:layout_constraintEnd_toEndOf="@+id/btnFind"
+        app:layout_constraintStart_toStartOf="@+id/btnFind"
+        app:layout_constraintTop_toBottomOf="@+id/btnFind" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
