--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:gravity="center"
-        android:textColor="#000000"
+        android:textColor="#13487C"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/txtTranslateResultLabel"
@@ -79,9 +79,9 @@
         android:id="@+id/txtTranslateOrgValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="1dp"
         android:gravity="center"
-        android:textColor="#000000"
+        android:textColor="#13487C"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/txtTranslateOrgLabel"
@@ -120,10 +120,11 @@
         android:id="@+id/txtLanguageValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="5dp"
         android:gravity="center"
-        android:textColor="#000000"
+        android:textColor="#13487C"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/txtLanguageLabel"
         app:layout_constraintStart_toStartOf="@+id/txtLanguageLabel"
         app:layout_constraintTop_toBottomOf="@+id/txtLanguageLabel" />
