--- a/app/src/main/res/layout/activity_sights_list.xml
+++ b/app/src/main/res/layout/activity_sights_list.xml
@@ -11,7 +11,8 @@
         android:id="@+id/listViewSights"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/list_item"/>
+        tools:listitem="@layout/list_item">
+    </ListView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
