Fix some UI problems, add warning msg to forgot pass actv.

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -63,4 +63,30 @@
         app:layout_constraintEnd_toEndOf="@+id/recoveryEmail"
         app:layout_constraintStart_toStartOf="@+id/recoveryEmail"
         app:layout_constraintTop_toBottomOf="@+id/recoveryEmail" />
+
+    <TextView
+        android:id="@+id/warningLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:text="@string/warning"
+        android:textColor="#E30A0A"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/btnSendEmailRecover"
+        app:layout_constraintStart_toStartOf="@+id/btnSendEmailRecover"
+        app:layout_constraintTop_toBottomOf="@+id/btnSendEmailRecover" />
+
+    <TextView
+        android:id="@+id/warningMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/check_your_spam_folder"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/warningLabel"
+        app:layout_constraintStart_toStartOf="@+id/warningLabel"
+        app:layout_constraintTop_toBottomOf="@+id/warningLabel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
