--- a/app/src/main/res/layout/activity_img_labeling.xml
+++ b/app/src/main/res/layout/activity_img_labeling.xml
@@ -71,19 +71,6 @@
         app:layout_constraintTop_toBottomOf="@+id/txtYourImage"
         app:srcCompat="@drawable/ic_launcher_background" />
 
-    <TextView
-        android:id="@+id/txtImgLblResult"
-        android:layout_width="353dp"
-        android:layout_height="132dp"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/myImage"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="@+id/myImage"
-        app:layout_constraintTop_toBottomOf="@+id/myImage" />
-
     <Button
         android:id="@+id/btnTranslateTxt"
         android:layout_width="wrap_content"
@@ -98,5 +85,18 @@
         app:layout_constraintBottom_toTopOf="@+id/btnBackImgLbl"
         app:layout_constraintEnd_toEndOf="@+id/txtImgLblResult"
         app:layout_constraintStart_toStartOf="@+id/txtImgLblResult" />
+
+    <TextView
+        android:id="@+id/txtImgLblResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/myImage"
+        app:layout_constraintStart_toStartOf="@+id/myImage"
+        app:layout_constraintTop_toBottomOf="@+id/myImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
